--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <html>
-<head></head>
+<head>
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+    }
+  </style>
+</head>
 <body></body>
 
 <script src='pixi.js'></script>
