--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
       margin: 0;
       padding: 0;
     }
+    canvas {
+      cursor: url(cursor.png), auto;
+    }
   </style>
 </head>
 <body></body>
