--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
       margin: 0;
       padding: 0;
     }
-    canvas {
+    body {
       cursor: url(cursor.png), auto;
+    }
+    canvas {
+      /*//border: 2px solid blue;*/
     }
   </style>
 </head>
@@ -14,4 +17,4 @@
 
 <script src='pixi.js'></script>
 <script src='vector.js'></script>
-<script src='main.js'></script>
+<script src='main.js' charset="utf-8"></script>
